// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "alert": 57346,
  "alibaba": 57347,
  "align-center": 57348,
  "align-left": 57349,
  "align-right": 57350,
  "alipay": 57352,
  "alipay-circle": 57351,
  "aliwangwang": 57353,
  "aliyun": 57354,
  "amazon": 57355,
  "android": 57356,
  "ant-cloud": 57357,
  "ant-design": 57358,
  "apartment": 57359,
  "api": 57360,
  "apple": 57361,
  "appstore": 57362,
  "area-chart": 57363,
  "arrow-down": 57364,
  "arrow-left": 57365,
  "arrow-right": 57366,
  "arrow-up": 57367,
  "arrows-alt": 57368,
  "audio": 57369,
  "audit": 57370,
  "backward": 57371,
  "bank": 57372,
  "bar-chart": 57373,
  "barcode": 57374,
  "bars": 57375,
  "behance": 57377,
  "behance-square": 57376,
  "bell": 57378,
  "bg-colors": 57379,
  "block": 57380,
  "bold": 57381,
  "book": 57382,
  "border": 57391,
  "border-bottom": 57383,
  "border-horizontal": 57384,
  "border-inner": 57385,
  "border-left": 57386,
  "border-outer": 57387,
  "border-right": 57388,
  "border-top": 57389,
  "border-verticle": 57390,
  "box-plot": 57392,
  "branches": 57393,
  "build": 57394,
  "bulb": 57395,
  "calculator": 57396,
  "calendar": 57397,
  "camera": 57398,
  "car": 57399,
  "caret-down": 57400,
  "caret-left": 57401,
  "caret-right": 57402,
  "caret-up": 57403,
  "carry-out": 57404,
  "check": 57407,
  "check-circle": 57405,
  "check-square": 57406,
  "chrome": 57408,
  "ci": 57409,
  "clock-circle": 57410,
  "close": 57413,
  "close-circle": 57411,
  "close-square": 57412,
  "cloud": 57418,
  "cloud-download": 57414,
  "cloud-server": 57415,
  "cloud-sync": 57416,
  "cloud-upload": 57417,
  "cluster": 57419,
  "code": 57421,
  "code-sandbox": 57420,
  "codepen": 57423,
  "codepen-circle": 57422,
  "coffee": 57424,
  "colum-height": 57425,
  "column-width": 57426,
  "compass": 57427,
  "contacts": 57428,
  "container": 57429,
  "control": 57430,
  "copy": 57431,
  "copyright": 57432,
  "credit-card": 57433,
  "crown": 57434,
  "customer-service": 57435,
  "dash": 57436,
  "dashboard": 57437,
  "database": 57438,
  "delete": 57439,
  "deployment-unit": 57440,
  "desktop": 57441,
  "diff": 57442,
  "dingding": 57443,
  "disconnect": 57444,
  "dislike": 57445,
  "dollar": 57446,
  "dot-chart": 57447,
  "double-left": 57448,
  "double-right": 57449,
  "down": 57452,
  "down-circle": 57450,
  "down-square": 57451,
  "download": 57453,
  "drag": 57454,
  "dribbble": 57456,
  "dribbble-square": 57455,
  "dropbox": 57457,
  "edit": 57458,
  "ellipsis": 57459,
  "enter": 57460,
  "environment": 57461,
  "euro": 57462,
  "exception": 57463,
  "exclamation": 57465,
  "exclamation-circle": 57464,
  "experiment": 57466,
  "export": 57467,
  "eye": 57468,
  "facebook": 57469,
  "fall": 57470,
  "fast-backward": 57471,
  "fast-forward": 57472,
  "file": 57489,
  "file-add": 57473,
  "file-done": 57474,
  "file-excel": 57475,
  "file-exclamation": 57476,
  "file-image": 57477,
  "file-jpg": 57478,
  "file-markdown": 57479,
  "file-pdf": 57480,
  "file-ppt": 57481,
  "file-protect": 57482,
  "file-search": 57483,
  "file-sync": 57484,
  "file-text": 57485,
  "file-unknown": 57486,
  "file-word": 57487,
  "file-zip": 57488,
  "filter": 57490,
  "fire": 57491,
  "flag": 57492,
  "folder": 57495,
  "folder-add": 57493,
  "folder-open": 57494,
  "font-colors": 57496,
  "font-size": 57497,
  "fork": 57498,
  "form": 57499,
  "forward": 57500,
  "frown": 57501,
  "fullscreen": 57503,
  "fullscreen-exit": 57502,
  "fund": 57504,
  "funnel-plot": 57505,
  "gateway": 57506,
  "gift": 57507,
  "github": 57508,
  "gitlab": 57509,
  "global": 57510,
  "gold": 57511,
  "google": 57513,
  "google-plus": 57512,
  "hdd": 57514,
  "heart": 57515,
  "heat-map": 57516,
  "highlight": 57517,
  "home": 57518,
  "hourglass": 57519,
  "html5": 57520,
  "idcard": 57521,
  "ie": 57522,
  "import": 57523,
  "inbox": 57524,
  "info": 57526,
  "info-circle": 57525,
  "instagram": 57527,
  "insurance": 57528,
  "interation": 57529,
  "issues-close": 57530,
  "italic": 57531,
  "key": 57532,
  "laptop": 57533,
  "layout": 57534,
  "left": 57537,
  "left-circle": 57535,
  "left-square": 57536,
  "like": 57538,
  "line": 57541,
  "line-chart": 57539,
  "line-height": 57540,
  "link": 57542,
  "linkedin": 57543,
  "loading": 57545,
  "loading-3-quarters": 57544,
  "lock": 57546,
  "login": 57547,
  "logout": 57548,
  "mail": 57549,
  "man": 57550,
  "medicine-box": 57551,
  "medium": 57553,
  "medium-workmark": 57552,
  "meh": 57554,
  "menu": 57557,
  "menu-fold": 57555,
  "menu-unfold": 57556,
  "message": 57558,
  "minus": 57561,
  "minus-circle": 57559,
  "minus-square": 57560,
  "mobile": 57562,
  "money-collect": 57563,
  "monitor": 57564,
  "mr": 57565,
  "notification": 57566,
  "number": 57567,
  "ordered-list": 57568,
  "paper-clip": 57569,
  "pause": 57571,
  "pause-circle": 57570,
  "pay-circle": 57572,
  "percentage": 57573,
  "phone": 57574,
  "pic-center": 57575,
  "pic-left": 57576,
  "pic-right": 57577,
  "picture": 57578,
  "pie-chart": 57579,
  "play-circle": 57580,
  "play-square": 57581,
  "plus": 57584,
  "plus-circle": 57582,
  "plus-square": 57583,
  "pound": 57585,
  "poweroff": 57586,
  "printer": 57587,
  "profile": 57588,
  "project": 57589,
  "property-safety": 57590,
  "pushpin": 57591,
  "qq": 57592,
  "qrcode": 57593,
  "question": 57595,
  "question-circle": 57594,
  "radar-chart": 57596,
  "radius-bottomleft": 57597,
  "radius-bottomright": 57598,
  "radius-setting": 57599,
  "radius-upleft": 57600,
  "radius-upright": 57601,
  "read": 57602,
  "reconciliation": 57603,
  "red-envelope": 57604,
  "reddit": 57605,
  "redo": 57606,
  "reload": 57608,
  "reload-time": 57607,
  "rest": 57609,
  "retweet": 57610,
  "right": 57613,
  "right-circle": 57611,
  "right-square": 57612,
  "rise": 57614,
  "robot": 57615,
  "rocket": 57616,
  "rollback": 57617,
  "safety": 57619,
  "safety-certificate": 57618,
  "save": 57620,
  "scan": 57621,
  "schedule": 57622,
  "scissor": 57623,
  "search": 57624,
  "security-scan": 57625,
  "select": 57626,
  "setting": 57627,
  "shake": 57628,
  "share-alt": 57629,
  "shop": 57630,
  "shopping": 57632,
  "shopping-cart": 57631,
  "shrink": 57633,
  "sketch": 57634,
  "skin": 57635,
  "skype": 57636,
  "slack": 57638,
  "slack-square": 57637,
  "sliders": 57639,
  "small-dash": 57640,
  "smile": 57641,
  "snippets": 57642,
  "solution": 57643,
  "sort-ascending": 57644,
  "sort-descending": 57645,
  "sound": 57646,
  "star": 57647,
  "step-backward": 57648,
  "step-forward": 57649,
  "stock": 57650,
  "stop": 57651,
  "strikethrough": 57652,
  "swap": 57655,
  "swap-left": 57653,
  "swap-right": 57654,
  "switcher": 57656,
  "sync": 57657,
  "table": 57658,
  "tablet": 57659,
  "tag": 57660,
  "tags": 57661,
  "taobao": 57663,
  "taobao-circle": 57662,
  "team": 57664,
  "thunderbolt": 57665,
  "to-top": 57666,
  "tool": 57667,
  "trademark": 57668,
  "transaction": 57669,
  "trophy": 57670,
  "twitter": 57671,
  "underline": 57672,
  "undo": 57673,
  "unlock": 57674,
  "unordered-list": 57675,
  "up": 57678,
  "up-circle": 57676,
  "up-square": 57677,
  "upload": 57679,
  "usb": 57680,
  "user": 57683,
  "user-add": 57681,
  "user-delete": 57682,
  "usergroup-add": 57684,
  "usergroup-delete": 57685,
  "vertical-align-bottom": 57686,
  "vertical-align-middle": 57687,
  "vertical-align-top": 57688,
  "vertical-left": 57689,
  "vertical-right": 57690,
  "video-camera": 57691,
  "wallet": 57692,
  "warning": 57693,
  "wechat": 57694,
  "weibo": 57697,
  "weibo-circle": 57695,
  "weibo-square": 57696,
  "wifi": 57698,
  "windows": 57699,
  "woman": 57700,
  "yahoo": 57701,
  "youtube": 57702,
  "yuque": 57703,
  "zhihu": 57704,
  "zoom-in": 57705,
  "zoom-out": 57706,
}
`;
